# SyncMCP

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
auth/: server.py
tools/: auth.py  google.py  google_calendar.py  google_tasks.py  shared.py
