[project]
name = "SyncMCP"
version = "0.1.0"
description = "Sync your calendar and tasks seamlessly with MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.1",
    "google-api-python-client>=2.172.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.1.0",
]
